# corp-fin-vals-sdk

./: .env  .gitignore  Makefile  README.md  custom_model.py  custom_model_corp_fin_dataset.py  custom_model_edgar_research_dataset.py  custom_model_google.py  main.py  prompts.py  providers_configs.py  pyproject.toml  requirements.txt  run_corpfin.py  run_example.py  suites.json
